# TensorCore

./: README.md  matrix.py  pyproject.toml  testLinear.py  testred.py  testsoftmax.py
Tensor/: __init__.py  nn.py  tensor.py  utils.py
