[project]
name = "Tensor"
version = "0.1.0"
description = "Estoy probando la creación de Matrices y Tensores"
authors = [
    { name = "Rivera.ai/Fredy Rivera", email = "riveraaai200678@gmail.com" }
]
requires-python = ">=3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["Tensor"]